--- a/learnFromFiles/Pages/Index.cshtml
+++ b/learnFromFiles/Pages/Index.cshtml
@@ -7,12 +7,12 @@
 
 
 <div class="mb-4">
-    <h4>1. UploadFile asp-validation- and Search SelectFiles/h4>
-    <!-- Aquí abrimos correctamente el form de upload -->
+    <h2>1. Upload Files and Search keywords in your Files </h2>
+     <p>Supported extensions: <code>.txt, .docx, .pdf, .pptx, .xlsx</code></p>
     <form method="post"
           enctype="multipart/form-data"
           asp-page-handler="Upload">
-        <input asp-for="Upload" type="file" accept=".txt" />
+        <input asp-for="Upload" type="file" accept=".txt,.docx,.pdf,.pptx,.xlsx" />
         <button type="submit" class="btn btn-secondary">Subir</button>
     </form>
 </div>
@@ -45,7 +45,7 @@
 @if (Model.SearchResults.Any())
 {
     <div class="mt-3">
-        <strong>Coincidencias encontradas:</strong>
+          <strong>Coincidencias encontradas de: @Model.ActualKey</strong>
         <ul>
             @foreach (var kv in Model.SearchResults)
             {
