--- a/learnFromFiles/Pages/Index.cshtml
+++ b/learnFromFiles/Pages/Index.cshtml
@@ -45,13 +45,17 @@
 @if (Model.SearchResults.Any())
 {
     <div class="mt-3">
-          <strong>Coincidencias encontradas de: @Model.ActualKey</strong>
+          <strong>FOund : @Model.SearchKey</strong>
         <ul>
             @foreach (var kv in Model.SearchResults)
             {
                 <li>
                     <strong>@kv.Key</strong>: @kv.Value
                 </li>
+                    <input type="hidden"
+           name="SearchResultTmp[@kv.Key]"
+           value="@kv.Value"
+           form="exportForm" />  
             }
         </ul>
     </div>
@@ -68,7 +72,16 @@
         @Model.Usuario.Greeting
     </div>
 }
-
+<div class="mb-3">
+    <h4>Export your search</h4>
+    <form  id="exportForm" method="post" asp-page-handler="Export">
+          <input type="text"
+               asp-for="FileNameToExport"
+               placeholder="FIlename to export"
+               class="form-control d-inline-block w-auto" />
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
